--- a/chi2_test_part2.ipynb
+++ b/chi2_test_part2.ipynb
@@ -201,7 +201,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "- น้อยกว่ากว่า a\n",
+    "- P value < a\n",
     "- ยอมรับ H0 ข้อมูลนี้แจกแจงปกติ"
    ]
   }
