--- a/chi2_test_part3.ipynb
+++ b/chi2_test_part3.ipynb
@@ -103,6 +103,14 @@
     "print(chi2_cal, p_val, dof, E)\n",
     "print(chi2_crit)"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "p value < a\n",
+    "- ยอมรับ H1"
+   ]
   }
  ],
  "metadata": {
